# ray_tracer

./: CMakeLists.txt  CMakeLists_poubelle.txt
cmake/: libigl.cmake
resources/: clip.stl  lens.stl  roue.stl
src/: main.cpp  quad_tree.cpp
src/simulation/Object/: Component.cpp  Component.hpp
src/simulation/component/: Component.cpp  Component.hpp
src/simulation/physique/: moteur.cpp
